--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,7 +33,7 @@ html {
   --red: #eb6666;
   --green: #6fb18a;
 }
-/* Blobs */
+/* Blobs para escritorio (ya lo tienes) */
 .blob-cont {
   display: flex;
   flex-direction: column;
@@ -58,7 +58,6 @@ html {
   left: 100px;
   height: 200px;
   width: 200px;
-
   animation: yellow 8s infinite ease;
 }
 
@@ -69,7 +68,6 @@ html {
   right: -20px;
   height: 200px;
   width: 250px;
-
   animation: green 8s infinite ease;
 }
 
@@ -80,76 +78,37 @@ html {
   top: 300px;
   height: 250px;
   width: 200px;
-
   animation: red 8s infinite linear;
 }
 
-@keyframes yellow {
-  0% {
-    top: 200px;
-    left: 100px;
-    transform: scale(1);
+/* MEDIA QUERY para móviles */
+/* AGREGADO: hace que los blobs sean más pequeños y se reubiquen */
+@media (max-width: 768px) {
+  .blob-cont {
+    height: 400px; /* más grande que antes */
+    width: 400px; /* más grande que antes */
+    transform: scale(1.1) translateX(-5%) translateY(-6%); /* un poquito de scale para que se vean grandes */
   }
-  30% {
-    top: 300px;
-    left: 150px;
-    transform: scale(1.2);
-  }
-  60% {
-    top: 100px;
-    left: 200px;
-    transform: scale(1.3);
-  }
-  100% {
-    top: 200px;
-    left: 100px;
-    transform: scale(1);
-  }
-}
 
-@keyframes green {
-  0% {
-    top: 80px;
-    right: -20px;
-    transform: scale(1.2);
+  .yellow {
+    height: 150px; /* tamaño intermedio */
+    width: 150px;
+    top: 120px; /* ajustado */
+    left: 60px;
   }
-  30% {
-    top: 300px;
-    right: -20px;
-    transform: scale(1);
-  }
-  60% {
-    top: 200px;
-    right: 100px;
-    transform: scale(1);
-  }
-  100% {
-    top: 80px;
-    right: -20px;
-    transform: scale(1.2);
-  }
-}
 
-@keyframes red {
-  0% {
-    top: 250px;
-    right: 0px;
-    transform: scale(1);
+  .green {
+    height: 150px;
+    width: 180px;
+    top: 50px;
+    right: -10px;
   }
-  30% {
-    top: 150px;
-    right: 150px;
-    transform: scale(1.4);
-  }
-  60% {
-    top: 250px;
-    right: 100px;
-    transform: scale(1);
-  }
-  100% {
-    top: 250px;
-    right: 0px;
-    transform: scale(1);
+
+  .red {
+    height: 180px;
+    width: 150px;
+    top: 200px;
+    right: 0;
   }
 }
 
